2011-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Group some of the environment processing blocks. The
	definition of shellstr, PATH and IFS is not influenced (getenv,
	getdef, restricted_shell) by and does not influence (addenv does
	not change environ) the authentication. And the authentication
	did not overwrite those definitions. This will ease an extraction
	from the big main() function.
	* src/su.c: Move definition of change_environment and shellstr
	after the switch to the final subsystem. The previous architecture
	forced to always change the environment (the shell starts with a
	'*' and was thus restricted, and change_environment could not be
	reset to false).
	* src/su.c: No need to change the user's shell in case of
	subsystem root. Update the comments.
	* src/su.c: Define shellstr before the environment so that
	restricted_shell is called only once. This will allow moving the
	environment definition after the switch to the new user.
	* src/su.c: Extract the authentication from the main function.
	* lib/prototypes.h, src/suauth.c, src/su.c (check_su_auth): Do not
	use the pwent global variable to communicate between APIs of
	different files. Added boolean parameter su_to_root to
	check_su_auth().
	* src/su.c (check_perms): Return the passwd entry of the finally
	authenticated user. Remove usage of the pwent variable.
	* src/su.c: The password of the caller is the one from the
	spwd structure only if the passwd's password is 'x'.
	* src/su.c: Cleanup local variables.

2011-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Updating pwent after expire() is not useful. Only the
	password information may have changed and they are not used
	anymore afterwards.
	* src/su.c: No need to call expire() if there are no shadow entry.
	No need to convert a passwd entry into an spwd entry in that case.

2011-06-12  Thomas Blein  <tblein@tblein.eu>

	* man/po/fr.po: French manpages translation
